style: code clean up